--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
                             <img class="slider-image" src="uploads/stima/website.jpg" alt="">
                             <img class="slider-image" src="uploads/stima/research.png" alt="">
                             <img class="slider-image" src="uploads/stima/chatbox.jpg" alt="">
+                            <img class="slider-image" src="uploads/stima/chatbox.jpg" alt="">
                         </div>
                     </div>
                 </div>
