--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
 			<li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="./uploads/eng_cv.pdf">CV</a>
+             </li>
           </ul>
         </div>
       </div>
@@ -80,7 +83,7 @@
 	
 	<section id="home" class="main-banner parallaxie" style="background: url('uploads/background.jpg')">
 		<div class="heading">
-			<h1>Hello I'm Chia-Wei Wu</h1>
+			<h1>Hello I am Chia-Wei Wu</h1>
 			<p>You don't need more time. You just need to DECIDE.</p>
 			<h3 class="cd-headline clip is-full-width">
 				<span>My expertise lies in </span>
@@ -94,42 +97,23 @@
 		</div>
 	</section>
 
-	<svg id="clouds" class="hidden-xs" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 85 100" preserveAspectRatio="none">
-        <path d="M-5 100 Q 0 20 5 100 Z
-            M0 100 Q 5 0 10 100
-            M5 100 Q 10 30 15 100
-            M10 100 Q 15 10 20 100
-            M15 100 Q 20 30 25 100
-            M20 100 Q 25 -10 30 100
-            M25 100 Q 30 10 35 100
-            M30 100 Q 35 30 40 100
-            M35 100 Q 40 10 45 100
-            M40 100 Q 45 50 50 100
-            M45 100 Q 50 20 55 100
-            M50 100 Q 55 40 60 100
-            M55 100 Q 60 60 65 100
-            M60 100 Q 65 50 70 100
-            M65 100 Q 70 20 75 100
-            M70 100 Q 75 45 80 100
-            M75 100 Q 80 30 85 100
-            M80 100 Q 85 20 90 100
-            M85 100 Q 90 50 95 100
-            M90 100 Q 95 25 100 100
-            M95 100 Q 100 15 105 100 Z">
-        </path>
-    </svg>
-
     <div id="autobiography" class="section wb">
+        <div class="section-heading text-center">
+            <h2>Autobiography</h2>
+        </div>
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
                     <div class="message-box">
-                        <h2>Autobiography</h2>
-                        <p>I specialize in Natural Language Processing, including Information Retrieval Systems, Generative Artificial Intelligence, Retrieval Augmented Generation Models, and Sentiment Analysis. Currently, I work at NARLabs.</p>
-						<p>Throughout my academic journey, I gained practical insights through competitions, projects, and roles as a research assistant at both the Integrative Strategic Value Management System and the Institute of Information Science at Academia Sinica. </p>
-                        <p>With a Math background, I embrace the principle of 'Bold Assumptions, Cautious Verification,' tackling challenges with logic and creativity.</p>
-                        <a href="./uploads/ch_cv.pdf" class="sim-btn btn-hover-new" data-text="Download CV"><span>Download Chinese CV</span></a>
-                        <a href="./uploads/eng_cv.pdf" class="sim-btn btn-hover-new" data-text="Download CV"><span>Download English CV</span></a>
+                        <h2>Who Am I ?</h2>
+                        <p>I have over two years of experience in the field of Natural Language Processing, with research interests covering Information Retrieval Systems, Retrieval Augmented Generation Models, Question Answering Systems, Sentiment Analysis, and Information Extraction.</p>
+                        <p>Currently, I have been working as an AI Engineer and Researcher at National Center for High-Performance Computing and Stima Tech.</p>
+                        <hr class="thick-line">
+                        <h2>Get In Touch</h2>
+                        <p>Email: chia.wei.nlp@gmail.com</p>
+                        <p>Website: chia-wei-wu.github.io</p>
+                        <p>CV: <a href="./uploads/eng_cv.pdf" style="font-family: 'Times New Roman', serif;"><span style="text-decoration: underline;">Download CV</span></a></p>                        
+                        <hr class="thick-line"> 
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
                 <div class="col-md-6">
@@ -180,33 +164,111 @@
                 </div><!-- end col -->
 				<div class="col-md-4">
                     <div class="services-inner-box">
-						<div class="ser-icon">
-							<img src="./uploads/icon/skills.png" style="width: 50px; height: 50px;">
-						</div>
-						<h2>Software Skills</h2>
-						<p>Programming Language: Python, R, Git, Maple, SQL.</p>
-                        <p>Word Processing: Latex, Excel, Word, PowerPoint.</p>
-					</div>
+                        <div class="ser-icon">
+                            <img src="./uploads/icon/skills.png" style="width: 50px; height: 50px;">
+                        </div>
+                        <h2>Language Skills</h2>
+                        <div class="card-body pb-2">
+                            <div class="d-flex justify-content-between align-items-center mb-3">
+                                <h6>Python</h6>
+                                <div class="progress" style="width: 70%;">
+                                    <div class="progress-bar bg-danger" role="progressbar" style="width: 98%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </div>
+                            <div class="d-flex justify-content-between align-items-center mb-3">
+                                <h6>R</h6>
+                                <div class="progress" style="width: 70%;">
+                                    <div class="progress-bar bg-danger" role="progressbar" style="width: 85%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </div>
+                            <div class="d-flex justify-content-between align-items-center mb-3">
+                                <h6>Git</h6>
+                                <div class="progress" style="width: 70%;">
+                                    <div class="progress-bar bg-danger" role="progressbar" style="width: 90%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </div>
+                            <div class="d-flex justify-content-between align-items-center mb-3">
+                                <h6>Maple</h6>
+                                <div class="progress" style="width: 70%;">
+                                    <div class="progress-bar bg-danger" role="progressbar" style="width: 90%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </div>
+                            <div class="d-flex justify-content-between align-items-center mb-3">
+                                <h6>SQL</h6>
+                                <div class="progress" style="width: 70%;">
+                                    <div class="progress-bar bg-danger" role="progressbar" style="width: 70%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div><!-- end col -->
-				<div class="col-md-4">
+                <div class="col-md-4">
                     <div class="services-inner-box">
-						<div class="ser-icon">
-							<img src="./uploads/icon/langauage.png" style="width: 50px; height: 50px;">
-						</div>
-						<h2>Language</h2>
-                        <p class="space">Native: Chinese</p>
-                        <p class="space">Others: English and Taiwanese</p>
-					</div>
+                        <div class="ser-icon">
+                            <img src="./uploads/icon/content.png" style="width: 50px; height: 50px;">
+                        </div>
+                        <h2>Word Processing</h2>
+                        <div class="card-body pb-2">
+                            <div class="d-flex justify-content-between align-items-center mb-3">
+                                <h6>Latex</h6>
+                                <div class="progress" style="width: 70%;">
+                                    <div class="progress-bar bg-danger" role="progressbar" style="width: 96%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </div>
+                            <div class="d-flex justify-content-between align-items-center mb-3">
+                                <h6>Excel</h6>
+                                <div class="progress" style="width: 70%;">
+                                    <div class="progress-bar bg-danger" role="progressbar" style="width: 96%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </div>
+                            <div class="d-flex justify-content-between align-items-center mb-3">
+                                <h6>Word</h6>
+                                <div class="progress" style="width: 70%;">
+                                    <div class="progress-bar bg-danger" role="progressbar" style="width: 90%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </div>
+                            <div class="d-flex justify-content-between align-items-center mb-3">
+                                <h6>PowerPoint</h6>
+                                <div class="progress" style="width: 70%;">
+                                    <div class="progress-bar bg-danger" role="progressbar" style="width: 80%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </div>
+                            <div class="d-flex justify-content-between align-items-center mb-3">
+                                <h6>Power BI</h6>
+                                <div class="progress" style="width: 70%;">
+                                    <div class="progress-bar bg-danger" role="progressbar" style="width: 70%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div><!-- end col -->
-				<div class="col-md-4">
+                <div class="col-md-4">
                     <div class="services-inner-box">
-						<div class="ser-icon">
-							<img src="./uploads/icon/hobbies.png" style="width: 50px; height: 50px;">
-						</div>
-						<h2>Hobbies</h2>
-						<p>Nature Lover: mountain sceneries, seascapes, and night views.</p>
-                        <p>Playing volleyball/baseball and watching the spectator sports.</p>
-					</div>
+                        <div class="ser-icon">
+                            <img src="./uploads/icon/langauage.png" style="width: 50px; height: 50px;">
+                        </div>
+                        <h2>Language</h2>
+                        <div class="card-body pb-2">
+                            <div class="d-flex justify-content-between align-items-center mb-3">
+                                <h6>Chinese</h6>
+                                <div class="progress" style="width: 70%;">
+                                    <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </div>
+                            <div class="d-flex justify-content-between align-items-center mb-3">
+                                <h6>English</h6>
+                                <div class="progress" style="width: 70%;">
+                                    <div class="progress-bar bg-danger" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </div>
+                            <div class="d-flex justify-content-between align-items-center mb-3">
+                                <h6>Taiwanese</h6>
+                                <div class="progress" style="width: 70%;">
+                                    <div class="progress-bar bg-danger" role="progressbar" style="width: 90%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div><!-- end col -->
             </div><!-- end row -->
         </div><!-- end container -->
