--- a/index.html
+++ b/index.html
@@ -98,22 +98,18 @@
 	</section>
 
     <div id="autobiography" class="section wb">
-        <div class="section-heading text-center">
-            <h2>Autobiography</h2>
-        </div>
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
                     <div class="message-box">
-                        <h2>Who Am I ?</h2>
+                        <h2>Autobiography</h2>
                         <p>I have over two years of experience in the field of Natural Language Processing, with research interests covering Information Retrieval Systems, Retrieval Augmented Generation Models, Question Answering Systems, Sentiment Analysis, and Information Extraction.</p>
                         <p>Currently, I have been working as an AI Engineer and Researcher at National Center for High-Performance Computing and Stima Tech.</p>
                         <hr class="thick-line">
                         <h2>Get In Touch</h2>
                         <p>Email: chia.wei.nlp@gmail.com</p>
                         <p>Website: chia-wei-wu.github.io</p>
-                        <p>CV: <a href="./uploads/eng_cv.pdf" style="font-family: 'Times New Roman', serif;"><span style="text-decoration: underline;">Download CV</span></a></p>                        
-                        <hr class="thick-line"> 
+                        <p>CV: <a href="./uploads/eng_cv.pdf" style="font-family: 'Times New Roman', serif;"><span style="text-decoration: underline;">Download CV</span></a></p>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
                 <div class="col-md-6">
@@ -126,11 +122,11 @@
     </div><!-- end section -->
 	
     <div id="about" class="section lb">
+        <div class="section-title text-center">
+            <h3>About Me</h3>
+            <p>The Foundation of My Future, Built on Past Experiences.</p>
+        </div><!-- end title -->
         <div class="container">
-            <div class="section-title text-left">
-                <h3>About Me</h3>
-                <p>The foundation of my future, built on past experiences.</p>
-            </div><!-- end title -->
             <div class="row">
 				<div class="col-md-4">
                     <div class="services-inner-box">
@@ -276,7 +272,7 @@
 
     <div id="stima" class="section wb">
         <div class="container">
-            <div class="section-title text-left">
+            <div class="section-title text-center">
                 <h3>Stima</h3>
                 <p>We Make Artificial Intelligence More Accessible.</p>
             </div><!-- end title -->
@@ -294,14 +290,23 @@
                     <div class="detail-box">
                         <div class="heading_container">
                             <hr>
-                            <h2>About Stima</h2>
+                            <h2>Stima Info</h2>
                         </div>
-                        <p>Stima has developed an advanced API and the StimaChat conversational system, providing seamless integration with models from OpenAI, Anthropic, Google, Meta, and others. This powerful service enables users to easily connect to a variety of AI models, ensuring a smooth and hassle-free experience. With Stima, you can enhance efficiency while enjoying cost-effective pricing.</p>
-                        <p>In the future, Stima will continue to develop specialized LLM for specific fields and expand its offerings to cater to diverse industry demands.</p>
-                        <a href="https://api.stima.tech/">Read More</a>
-                        <hr>
-                    </div>
-                </div><!-- end info -->
+                        <p>Stima has developed an API and the Chat Conversational System, providing integration with models from OpenAI, Anthropic, Google, Meta, and others. This service enables users to easily connect to a variety of AI models. With Stima, you can enhance efficiency while enjoying cost-effective pricing.</p>
+                        <p>In the future, Stima will continue to develop LLM for specific fields and expand its offerings to cater to diverse demands.</p>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <a href="https://api.stima.tech/" style="font-family: 'Times New Roman', serif;"><span style="text-decoration: underline;">Read More</span></a></p>
+                            </div>
+                            <div class="col-md-4">
+                                <a href="https://chat.stima.tech/" style="font-family: 'Times New Roman', serif;"><span style="text-decoration: underline;">Early Access</span></a></p>
+                            </div>
+                            <div class="col-md-4">
+                                <a href="https://blog.stima.tech/" style="font-family: 'Times New Roman', serif;"><span style="text-decoration: underline;">Research Report</span></a></p>
+                            </div>
+                        </div>
+                    </div><!-- end detail-box -->
+                </div><!-- end col -->
             </div><!-- end container -->
         </div><!-- end section -->
     </div>
